# Generated by Django 4.2.11 on 2026-04-13 17:16

from django.db import migrations, models
import django.utils.timezone


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='MLAnalysisCache',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('analysis_type', models.CharField(choices=[('hotspot_clusters', 'Hotspot Clusters (DBSCAN)'), ('trend_analytics', 'Trend Analytics (pandas)'), ('recovery_zones', 'Recovery Zone Analysis (PostGIS)')], max_length=30)),
                ('scope_city', models.CharField(blank=True, help_text='NULL = national analysis; city name = city-scoped analysis', max_length=80, null=True)),
                ('computed_at', models.DateTimeField(default=django.utils.timezone.now)),
                ('expires_at', models.DateTimeField(help_text='Dashboard uses cache if NOW() < expires_at; otherwise triggers recompute')),
                ('result_data', models.JSONField(help_text='Full ML output: cluster centroids, trend series, zone coordinates')),
                ('record_count', models.IntegerField(blank=True, help_text='Records used in this analysis — shown for data freshness context', null=True)),
            ],
            options={
                'db_table': 'ml_analysis_cache',
                'ordering': ['-computed_at'],
            },
        ),
    ]
