erDiagram
    USER ||--o{ BIKE : owns
    BIKE ||--o{ THEFT_REPORT : has
    THEFT_REPORT ||--o{ SIGHTING : receives
    USER ||--o{ NOTIFICATION : gets
    USER ||--o{ AUDIT_LOG : creates
    USER ||--o{ THEFT_REPORT : files
    ML_ANALYSIS_CACHE {
      int id
      string analysis_type
      string cache_key
      json payload
      datetime generated_at
    }
    USER {
      int id
      string email
      string role
      string city
    }
    BIKE {
      int id
      int owner_id
      string engine_number
      string chassis_number
      string plate_number
      bool is_stolen
    }
    THEFT_REPORT {
      int id
      int bike_id
      int owner_id
      string status
      date theft_date
      string theft_city
      point theft_location
      point recovery_location
    }
    SIGHTING {
      int id
      int report_id
      int submitted_by_id
      string engine_partial
      string chassis_partial
      float confidence_score
      string owner_confirmation_status
    }
    NOTIFICATION {
      int id
      int recipient_id
      string type
      bool is_read
      datetime created_at
    }
    AUDIT_LOG {
      int id
      int actor_id
      string action
      string endpoint
      datetime timestamp
    }
